[issue-8]: feat: add 收藏栏

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         </div>
         <div class="controls">
           <input type="text" id="search-input" placeholder="搜索剪贴板内容..." />
+          <div class="filter-buttons">
+            <button id="show-all-btn" class="btn-filter active">全部</button>
+            <button id="show-favorites-btn" class="btn-filter">收藏</button>
+          </div>
           <button id="clear-all-btn" class="btn-danger">清空历史</button>
         </div>
       </header>
